# eetc-utils

./: .gitignore  CLAUDE.md  Makefile  README.md  financials.py  google_sheets.py  plots.py  pyproject.toml  requirements.in  requirements.txt
src/eetc_utils/: finance.py  options.py
src/eetc_utils/clients/: eetc_data.py  eetc_notifications.py
src/eetc_utils/strategy/: engine.py  strategy.py
src/eetc_utils/strategy/backtesting/: broker_sim.py  engine.py  metrics.py  strategy.py
src/utils/: finance.py
tests/: conftest.py  test_finance.py  test_financials.py  test_options.py
tests/clients/: test_eetc_data.py  test_eetc_notifications.py
